--- a/components/logo.module.scss
+++ b/components/logo.module.scss
@@ -8,9 +8,28 @@
         .logo {
             width: 100%;
             position: relative;
-            height: 100%;
 
-            img {
+            span {
+                max-height: variables.$logo-size-4 !important;
+                @media (min-width: 352px) {
+                    max-height: variables.$logo-size-3 !important;
+                }
+                @media (min-width: 500px) {
+                    max-height: variables.$logo-size-2 !important;
+                }
+
+                @media (min-width: 920px) {
+                    max-height: variables.$logo-size !important;
+                }
+
+                img {
+                    margin: 0 !important;
+                    height: 100% !important;
+                    min-width: 0 !important;
+                    width: auto !important;
+                }
+
+                /* img {
                 width: auto;
                 max-height: 30px;
 
@@ -21,6 +40,7 @@
                 @media (min-width: 620px) {
                     max-height: variables.$logo-size !important;
                 }
+            } */
             }
         }
     }
