--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -9,10 +9,14 @@ $aspect-ratio-3_4: math.div(3, 4);
 $gap: 20px;
 $logo-size: 100px;
 $logo-size-2: 60px;
+$logo-size-3: 40px;
+$logo-size-4: 30px;
 $logo-padding: 10px;
 $head-padding: 4px;
-$layout-padding: $logo-size + ($logo-padding * 2) + $head-padding;
-$layout-padding-2: $logo-size-2 + ($logo-padding * 2) + $head-padding;
+$layout-padding: $logo-size + ($logo-padding * 2);
+$layout-padding-2: $logo-size-2 + ($logo-padding * 2);
+$layout-padding-3: $logo-size-3 + ($logo-padding * 2);
+$layout-padding-4: $logo-size-4 + ($logo-padding * 2);
 
 /*Colors*/
 $linkColor: rgb(230, 211, 65);
